--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <div class="service-box">
                         <a class="page-scroll" href="#traductions">
                         <i class="fa fa-4x fa-leanpub wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                        <h3>Traductions</h3></a>
+                        <h3>Traduction</h3></a>
 
                     </div>
                 </div>
@@ -210,7 +210,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Traductions</h2>
+                    <h2 class="section-heading">Traduction</h2>
                     <hr class="light">
                     <p>Traduction de l’anglais au français.</p>
                     <p>Textes généraux et littéraires (mémoires, thèses, articles, manuscrits, lettres de motivation, etc.)</p>
