--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     <h3>Cours et ateliers de littérature</h3>
                         <p>Cours pour améliorer votre connaissance des principaux écrivains, ainsi que des mouvements et critiques littéraires.</p>
                         <p>Groupes de lecture pour lire ensemble et analyser des ouvrages de littérature française et francophone (notamment des 19e, 20e et 21e siècles).</p>
-                        <p>Parcours visites littéraires de Paris. Visites guidées de Paris en français ou en anglais au fil des lieux importants pour les écrivains récents, pour mieux connaître leurs œuvres et les situer dans leur contexte géographique et culturel. </p>
+                        <p>Parcours visites littéraires de Paris. Visites guidées de Paris, en français ou en anglais, au fil des lieux importants pour les écrivains récents, pour mieux connaître leurs œuvres et les situer dans leur contexte géographique et culturel. </p>
                 </div>
             </div>
         </div>
@@ -213,7 +213,7 @@
                     <h2 class="section-heading">Traduction</h2>
                     <hr class="light">
                     <p>Traduction de l’anglais au français.</p>
-                    <p>Textes généraux et littéraires (mémoires, thèses, articles, manuscrits, lettres de motivation, etc.)</p>
+                    <p>Textes généraux et littéraires (lettres de motivation, CV, mémoires, thèses, articles, manuscrits, etc.)</p>
                     <p>Ensemble, nous établissons les dates d’échéance et le budget en fonction de vos besoins et contraintes. Nos délais et tarifs sont compétitifs.</p>
                 </div>
             </div>
@@ -227,7 +227,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Relecture et correction</h2>
                     <hr class="dark">
-                    <p>Relecture et correction de textes généraux et littéraires (mémoires, thèses, articles, manuscrits, lettres de motivation, etc.)</p>
+                    <p>Relecture et correction de textes généraux et littéraires (lettres de motivation, CV, mémoires, thèses, articles, manuscrits, etc.)</p>
                     <p>Nous convenons ensemble des dates d’échéance, du type de corrections souhaité (orthographe, grammaire, syntaxe, style) et du budget, pour un travail attentivement corrigé prêt à être rendu, envoyé, imprimé et publié dans de brefs délais.</p>
                 </div>
             </div>
