--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
                     <hr class="dark">
                     <h3>Cours de français</h3>
 
-                        <p>Pour retrouver ou atteindre un bon niveau de langue en français oral et écrit, pour améliorer votre correspondance, perfectionner vos capacités rédactionnelles, travaillons grammaire, vocabulaire, syntaxe, style d’écriture, etc.</p>
-                        <p>Pour être plus efficace, stratégique et à l’aise à l’oral, travaillons les techniques d’expression orale pour la prise de parole en public lors de réunions, séminaires, conférences, etc.</p>
+                        <p>Pour retrouver ou atteindre un bon niveau de langue en français oral et écrit, pour améliorer votre correspondance, perfectionner vos capacités rédactionnelles, nous travaillons ensemble grammaire, vocabulaire, syntaxe, style d’écriture, etc.</p>
+                        <p>Pour être plus efficace, stratégique et à l’aise à l’oral, nous travaillons les techniques d’expression orale pour la prise de parole en public lors de réunions, séminaires, conférences, etc.</p>
 
                     <hr class="light">
 
