--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Nous contacter</h2>
                     <hr class="primary">
-                    <p>Contactez-nous pour davantage d'informations sur nos services</p>
+                    <p>Contactez-nous pour obtenir davantage d'informations sur nos services</p>
                 </div>
             </div>
 
@@ -256,7 +256,7 @@
                 </div>
                 <div class="col-sm-4 text-center">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="mailto:contact@langagement.com">contact@langagement.com</a></p>
+                    <p><a href="mailto:contact@langagement.fr">contact@langagement.fr</a></p>
                 </div>
                 <div class="col-sm-4 text-center">
                     <i class="fa fa-facebook fa-3x wow bounceIn" data-wow-delay=".1s"></i>
