--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     <hr class="light">
                     <p>Traduction de l’anglais au français.</p>
                     <p>Textes généraux et littéraires (lettres de motivation, CV, mémoires, thèses, articles, manuscrits, etc.)</p>
-                    <p>Ensemble, nous établissons les dates d’échéance et le budget en fonction de vos besoins et contraintes. Nos délais et tarifs sont compétitifs.</p>
+                    <p>Ensemble, nous établissons les dates d’échéance et le budget en fonction de vos besoins et contraintes.</p>
                 </div>
             </div>
         </div>
