--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
                     <p>Nous vous aidons dans l'organisation des devoirs, la compréhension des leçons, etc.</p>
                     <hr>
                     <p>Engageons-nous ensemble pour surmonter lacunes et difficultés que vous pouvez rencontrer, pour réussir les devoirs et examens, pour avoir des acquis solides en fin de cycle collège ou lycée.</p>
-                    <p>Nos approches pédagogiques sont variées et flexibles pour servir les différents types d’apprenants.</p>
-                    <p>Ensemble, nous évaluons vos besoins, votre niveau et mettons en place un plan d’étude, un calendrier et un budget adaptés.</p>
+                    <p>Nos approches pédagogiques sont variées et flexibles pour servir les différents types d'apprenants.</p>
+                    <p>Ensemble, nous évaluons vos besoins, votre niveau et mettons en place un plan d'étude, un calendrier et un budget adaptés.</p>
                 </div>
             </div>
         </div>
