--- a/index.html
+++ b/index.html
@@ -192,13 +192,13 @@
                     <hr class="dark">
                     <h3>Cours de français</h3>
 
-                        <p>Pour retrouver ou atteindre un bon niveau de langue en français oral et écrit, pour améliorer votre correspondance, perfectionner vos capacités rédactionnelles, nous travaillons ensemble grammaire, vocabulaire, syntaxe, style d’écriture, etc.</p>
-                        <p>Pour être plus efficace, stratégique et à l’aise à l’oral, nous travaillons les techniques d’expression orale pour la prise de parole en public lors de réunions, séminaires, conférences, etc.</p>
+                        <p>Pour retrouver ou atteindre un bon niveau de langue en français oral et écrit, pour améliorer votre correspondance, perfectionner vos capacités rédactionnelles, nous travaillons ensemble grammaire, vocabulaire, syntaxe, style d'écriture, etc.</p>
+                        <p>Pour être plus efficace, stratégique et à l'aise à l'oral, nous travaillons les techniques d'expression orale pour la prise de parole en public lors de réunions, séminaires, conférences, etc.</p>
 
                     <hr class="light">
 
-                    <h3>Cours d’anglais</h3>
-                        <p>Cours de langue, conversation, culture et ateliers d’écriture.</p>
+                    <h3>Cours d'anglais</h3>
+                        <p>Cours de langue, conversation, culture et ateliers d'écriture.</p>
                         <p>Maîtriser les règles et outils de communication orale et écrite pour des échanges linguistiques et culturels optimisés avec des interlocuteurs anglophones.</p>
                 </div>
             </div>
@@ -212,9 +212,9 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Traduction</h2>
                     <hr class="light">
-                    <p>Traduction de l’anglais au français.</p>
+                    <p>Traduction de l'anglais au français.</p>
                     <p>Textes généraux et littéraires (lettres de motivation, CV, mémoires, thèses, articles, manuscrits, etc.)</p>
-                    <p>Ensemble, nous établissons les dates d’échéance et le budget en fonction de vos besoins et contraintes.</p>
+                    <p>Ensemble, nous établissons les dates d'échéance et le budget en fonction de vos besoins et contraintes.</p>
                 </div>
             </div>
         </div>
@@ -228,7 +228,7 @@
                     <h2 class="section-heading">Relecture et correction</h2>
                     <hr class="dark">
                     <p>Relecture et correction de textes généraux et littéraires (lettres de motivation, CV, mémoires, thèses, articles, manuscrits, etc.)</p>
-                    <p>Nous convenons ensemble des dates d’échéance, du type de corrections souhaité (orthographe, grammaire, syntaxe, style) et du budget, pour un travail attentivement corrigé prêt à être rendu, envoyé, imprimé et publié dans de brefs délais.</p>
+                    <p>Nous convenons ensemble des dates d'échéance, du type de corrections souhaité (orthographe, grammaire, syntaxe, style) et du budget, pour un travail attentivement corrigé prêt à être rendu, envoyé, imprimé et publié dans de brefs délais.</p>
                 </div>
             </div>
         </div>
