--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     <p><a href="mailto:contact@langagement.fr">contact@langagement.fr</a></p>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <i class="fa fa-facebook fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                    <i class="fa fa-skype fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                     <script type="text/javascript" src="http://www.skypeassets.com/i/scom/js/skype-uri.js"></script>
 <div id="SkypeButton_Call_Langagement_1">
   <script type="text/javascript">
