--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Cours de FLE, Soutien scolaire, Cours aux entreprises, Traductions, Relecture et correction">
+    <meta name="author" content="Langagement">
 
     <title>Langagement</title>
 
@@ -261,17 +261,17 @@
                 <div class="col-sm-4 text-center">
                     <i class="fa fa-skype fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                     <script type="text/javascript" src="http://www.skypeassets.com/i/scom/js/skype-uri.js"></script>
-<div id="SkypeButton_Call_Langagement_1">
-  <script type="text/javascript">
-    Skype.ui({
-      "name": "call",
-      "element": "SkypeButton_Call_Langagement_1",
-      "participants": ["Langagement"],
-      "imageColor": "white",
-      "imageSize": 24
-    });
-  </script>
-</div>
+                    <div id="SkypeButton_Call_Langagement_1">
+                      <script type="text/javascript">
+                        Skype.ui({
+                          "name": "call",
+                          "element": "SkypeButton_Call_Langagement_1",
+                          "participants": ["Langagement"],
+                          "imageColor": "white",
+                          "imageSize": 24
+                        });
+                      </script>
+                    </div>
                 </div>
             </div>
 
@@ -281,10 +281,10 @@
 <section id="social-footer">
     <div class="container">
         <div class="row">
-            <div class="col-xs-10">
+            <div class="col-xs-12 col-sm-10">
                 <p>Engageons-nous ensemble à travers le langage.</p>
             </div>
-            <div class="col-xs-2">
+            <div class="col-xs-12 col-sm-2">
                 <p>Langagement</p>
             </div>
         </div>
