--- a/index.html
+++ b/index.html
@@ -6,8 +6,23 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Cours de FLE, Soutien scolaire, Cours aux entreprises, Traductions, Relecture et correction">
+    <meta name="description" content="Cours de FLE, Soutien scolaire, Cours aux entreprises, Traduction, Relecture et correction">
     <meta name="author" content="Langagement">
+    
+    <meta property="og:url" content="http://langagement.fr">
+    <meta property="og:title" content="Langagement">
+    <meta property="og:description" content="Cours de FLE, Soutien scolaire, Cours aux entreprises, Traduction, Relecture et correction">
+
+	<meta property="og:image" content="img/lbook.jpg">
+	<meta property="og:image:type" content="image/jpeg">
+	<meta property="og:image:width" content="1900">
+	<meta property="og:image:height" content="1066">
+
+	<meta property="og:image" content="img/sbook.jpg">
+	<meta property="og:image:type" content="image/jpeg">
+	<meta property="og:image:width" content="242">
+	<meta property="og:image:height" content="242">
+
 
     <title>Langagement</title>
 
