--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <meta name="description" content="Cours de FLE, Soutien scolaire, Cours aux entreprises, Traduction, Relecture et correction">
     <meta name="author" content="Langagement">
     
-    <meta property="og:url" content="http://www.langagement.fr">
+    <meta property="og:url" content="http://langagement.fr">
     <meta property="og:title" content="Langagement">
     <meta property="og:description" content="Cours de FLE, Soutien scolaire, Cours aux entreprises, Traduction, Relecture et correction">
     <meta property="og:type" content="website"/>
 
-    <meta property="og:image" content="img/lbook.jpg">
+    <meta property="og:image" content="http://langagement.fr/img/lbook.jpg">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="1900">
     <meta property="og:image:height" content="1066">
 	
-    <meta property="og:image" content="img/sbook.jpg">
+    <meta property="og:image" content="http://langagement.fr/img/sbook.jpg">
     <meta property="og:image:type" content="image/jpeg"> 
     <meta property="og:image:width" content="242">
     <meta property="og:image:height" content="242">
