--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Cours de FLE, Soutien scolaire, Cours aux entreprises, Traduction, Relecture et correction">
     <meta name="author" content="Langagement">
     
-    <link rel="canonical" href="http://langagement.fr/" />
+    <link rel="canonical" href="http://langagement.fr" />
     
     <meta property="og:url" content="http://langagement.fr" />
     <meta property="og:title" content="Langagement" />
@@ -21,11 +21,6 @@
     <meta property="og:image:width" content="1900" />
     <meta property="og:image:height" content="1066" />
 	
-    <meta property="og:image" content="http://langagement.fr/img/sbook.jpg" />
-    <meta property="og:image:type" content="image/jpeg" /> 
-    <meta property="og:image:width" content="242" />
-    <meta property="og:image:height" content="242" />
-
 
     <title>Langagement</title>
 
