--- a/index.html
+++ b/index.html
@@ -9,17 +9,15 @@
     <meta name="description" content="Cours de FLE, Soutien scolaire, Cours aux entreprises, Traduction, Relecture et correction">
     <meta name="author" content="Langagement">
     
-    <link rel="canonical" href="http://langagement.fr" />
-    
-    <meta property="og:url" content="http://langagement.fr" />
-    <meta property="og:title" content="Langagement" />
-    <meta property="og:description" content="Cours de FLE, Soutien scolaire, Cours aux entreprises, Traduction, Relecture et correction" />
-    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://langagement.fr"/>
+    <meta property="og:title" content="Langagement"/>
+    <meta property="og:description" content="Cours de FLE, Soutien scolaire, Cours aux entreprises, Traduction, Relecture et correction"/>
+    <meta property="og:type" content="website"/>
 
-    <meta property="og:image" content="http://langagement.fr/img/lbook.jpg" />
-    <meta property="og:image:type" content="image/jpeg" />
-    <meta property="og:image:width" content="1900" />
-    <meta property="og:image:height" content="1066" />
+    <meta property="og:image" content="http://langagement.fr/img/lbook.jpg"/>
+    <meta property="og:image:type" content="image/jpeg"/>
+    <meta property="og:image:width" content="1900"/>
+    <meta property="og:image:height" content="1066"/>
 	
 
     <title>Langagement</title>
@@ -265,7 +263,7 @@
             <div class="row">
                 <div class="col-sm-4 text-center">
                     <i class="fa fa-phone fa-3x wow bounceIn"></i>
-                    <p><a href="tel:06 60 93 92 82">06 60 93 92 82</a></p>
+                    <p><a href="#">06 60 93 92 82</a></p>
                 </div>
                 <div class="col-sm-4 text-center">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
