--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr-FR" prefix="og: http://ogp.me/ns#" >
+<html lang="fr" prefix="og: http://ogp.me/ns#">
 
 <head>
 
@@ -9,11 +9,6 @@
     <meta name="description" content="Cours de FLE, Soutien scolaire, Cours aux entreprises, Traduction, Relecture et correction">
     <meta name="author" content="Langagement">
     
-    <meta property="og:url" content="http://langagement.fr"/>
-    <meta property="og:title" content="Langagement"/>
-    <meta property="og:description" content="Cours de FLE, Soutien scolaire, Cours aux entreprises, Traduction, Relecture et correction"/>
-    <meta property="og:type" content="website"/>
-
     <meta property="og:image" content="http://langagement.fr/img/lbook.jpg"/>
     <meta property="og:image:type" content="image/jpeg"/>
     <meta property="og:image:width" content="1900"/>
