Move ns to head

--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
-<html lang="fr" prefix="og: http://ogp.me/ns#">
+<html lang="fr">
 
-<head>
+<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#">
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Cours de FLE, Soutien scolaire, Cours aux entreprises, Traduction, Relecture et correction">
     <meta name="author" content="Langagement">
+    
+    <meta property="og:title" content="Langagement">
+    <meta property="og:url" content="http://langagement.fr">
+    <meta property="og:site_name" content="Langagement">
+    <meta property="og:description" content="Cours de FLE, Soutien scolaire, Cours aux entreprises, Traduction, Relecture et correction">
     
     <meta property="og:image" content="http://langagement.fr/img/lbook.jpg"/>
     <meta property="og:image:type" content="image/jpeg"/>
