--- a/index.html
+++ b/index.html
@@ -14,11 +14,8 @@
     <meta property="og:site_name" content="Langagement">
     <meta property="og:description" content="Cours de FLE, Soutien scolaire, Cours aux entreprises, Traduction, Relecture et correction">
     
-    <meta property="og:image" content="http://langagement.fr/img/lbook.jpg"/>
-    <meta property="og:image:type" content="image/jpeg"/>
-    <meta property="og:image:width" content="1900"/>
-    <meta property="og:image:height" content="1066"/>
-	
+    <meta property="og:image" content="http://langagement.fr/img/lbook.jpg">
+    
 
     <title>Langagement</title>
 
