--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <meta property="og:site_name" content="Langagement">
     <meta property="og:description" content="Cours de FLE, Soutien scolaire, Cours aux entreprises, Traduction, Relecture et correction">
     
-    <meta property="og:image" content="http://langagement.fr/img/lbook.jpg">
+    <meta property="og:image" content="http://langagement.fr/img/sbook.jpg">
+    <meta property="og:image:type" content="image/jpeg" />
+	<meta property="og:image:width" content="200" />
+	<meta property="og:image:height" content="200" />
     
 
     <title>Langagement</title>
