Add large image

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta property="og:description" content="Cours de FLE, Soutien scolaire, Cours aux entreprises, Traduction, Relecture et correction">
     
     <meta property="og:image" content="http://langagement.fr/img/sbook.jpg">
+    <meta property="og:image" content="http://langagement.fr/img/logo.jpg">
 
     <title>Langagement</title>
 
