--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                     <li>
+                        <a href="http://langagement.fr/contact">L'équipe</a>
+                    </li>
+                    <li>
                         <a href="http://langagement.com">EN</a>
                     </li>
                 </ul>
@@ -263,7 +266,7 @@
             <div class="row">
                 <div class="col-sm-4 text-center">
                     <i class="fa fa-phone fa-3x wow bounceIn"></i>
-                    <p><a href="#">06 60 93 92 82</a></p>
+                    <p><a href="tel:+33660939282">06 60 93 92 82</a></p>
                 </div>
                 <div class="col-sm-4 text-center">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
@@ -292,11 +295,11 @@
 <section id="social-footer">
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-sm-10">
+            <div class="col-xs-12 col-sm-8">
                 <p>Engageons-nous ensemble à travers le langage.</p>
             </div>
-            <div class="col-xs-12 col-sm-2">
-                <p>Langagement</p>
+            <div class="col-xs-12 col-sm-4">
+                    <p><a href="http://langagement.fr/contact">Fondatrice de Langagement</a></p>
             </div>
         </div>
     </div>
