--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
         <div class="row">
           <div class="col-md-6">
           <br>
-            <img src="img/lbook.jpg" class="img-responsive img-rounded" alt="" />
+            <img src="img/logo.jpg" class="img-responsive img-rounded" alt="" />
           </div>
           <div class="col-md-6">
             <h3>Fondatrice</h3>
