--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,161 @@
-Contact
+<!DOCTYPE html>
+<html lang="fr">
+
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Langagement</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
+
+    <!-- Custom Fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
+    <!-- Plugin CSS -->
+    <link rel="stylesheet" href="css/animate.min.css" type="text/css">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/creative.css" type="text/css">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+</head>
+
+
+<body id="page-top">
+
+    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">Langagement</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-navbar-collapse">
+                <ul class="nav navbar-nav navbar-right">
+
+                    <li>
+                        <a class="page-scroll" href="#bio">Biographie</a>
+                    </li>
+
+                    <li>
+                        <a class="page-scroll" href="#legal">Contact</a>
+                    </li>
+                    <li>
+                        <a href="http://langagement.fr">Langagement</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
+
+
+  <section id="bio" class="bg-primary">
+
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+
+            <img src="img/lbook.jpg" class="img-responsive img-rounded" alt="" />
+          </div>
+          <div class="col-md-6">
+            <p><strong>Biographie</strong></p>
+            <p>
+            Emmanuelle Vanborre, qui a fondé Langagement, est originiaire du sud de la France. </p>
+            <p>Après des études d’anglais et de Français Langue Etrangère (FLE) à l’université Paul Valéry à Montpellier, à l’université de Reading en Angleterre et à l’université William & Mary en Virginie, elle a enseigné pendant un an à l’université Dillard, à la Nouvelle Orléans, puis a continué ses études à Boston. </p>
+            <p>Elle a obtenu un master et un doctorat de lettres modernes de l’université Boston College où elle enseignait le français. Lors de ses études, elle a également été directrice de la maison française pour laquelle elle organisait des conférences et activités culturelles. Elle a encadré des programmes d’été à Paris pour des groupes d’étudiants américains. Elle a aussi créé des sites web pour l’enseignement du français, a fait des traductions et donné des cours de français et d’anglais à des particuliers et à des associations. </p>
+            <p>Pendant 8 ans, Emmanuelle a été professeur de français à l’université de Gordon College, au nord de Boston. Elle enseignait, conseillait les étudiants, s’occupait du cercle français et organisait des activités culturelles et littéraires. Pendant 3 ans, elle a également été directrice du département de langues et linguistique. </p>
+            <p>Elle a publié plusieurs comptes rendus, articles et livres sur la littérature française et francophone, notamment sur Maurice Blanchot, Albert Camus et Maryse Condé.
+            </p>
+
+            <blockquote>
+            Pri pertinacia elaboraret te, an eirmod delicatissimi nec. Eu liber quodsi maiorum mei.
+            Civibus perfecto rationibus id his, est noster nostrud aliquando at.
+            </blockquote>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /Section: about -->
+
+<section id="legal">
+
+    <div class="container">
+        <div class="row">
+
+          <div class="col-md-6">
+            <p><strong>Contact</strong></p>
+            <p>Emmanuelle Vanborre</p>
+            <p>Langagement</p>
+            <p>SIREN 813 480 688</p>
+            <p>eavanborre@langagement.fr</p>
+            <p>06 60 93 92 82</p>
+          </div>
+
+          <div class="col-md-6">
+
+            <img src="img/lbook.jpg" class="img-responsive img-rounded" alt="" />
+          </div>
+
+        </div>
+      </div>
+    </section>
+    <!-- /Section: contact -->
+
+
+
+  <section id="social-footer">
+      <div class="container">
+          <div class="row">
+
+                  <div class="col-lg-10">Engageons-nous ensemble à travers le langage.</div>
+
+                  <div class="col-lg-2 align-right">Langagement</div>
+
+          </div>
+      </div>
+  </section>
+
+
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/jquery.fittext.js"></script>
+    <script src="js/wow.min.js"></script>
+
+    <!-- Custom Theme JavaScript -->
+    <script src="js/creative.js"></script>
+
+</body>
+
+</html>
+
