--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
                     </li>
 
                     <li>
-                        <a class="page-scroll" href="#legal">Contact</a>
+                        <a class="page-scroll" href="#legal">Mentions légales</a>
                     </li>
                     <li>
                         <a href="http://langagement.fr">Langagement</a>
@@ -105,7 +105,7 @@
         <div class="row vertical-align">
 
           <div class="col-md-6">
-            <h3>Contact</h3>
+            <h3>Mentions légales</h3>
             <br>
             <p>Emmanuelle Vanborre</p>
             <p>Langagement</p>
