--- a/contact.html
+++ b/contact.html
@@ -49,22 +49,17 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Langagement</a>
+                <a class="navbar-brand page-scroll" href="http://langagement.fr">Langagement</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-
                     <li>
                         <a class="page-scroll" href="#bio">Fondatrice</a>
                     </li>
-
                     <li>
                         <a class="page-scroll" href="#legal">Mentions légales</a>
-                    </li>
-                    <li>
-                        <a href="http://langagement.fr">Langagement</a>
                     </li>
                 </ul>
             </div>
