--- a/contact.html
+++ b/contact.html
@@ -49,21 +49,22 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="http://langagement.fr">Langagement</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Langagement</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
+
                     <li>
-<<<<<<< HEAD
                         <a class="page-scroll" href="#bio">Biographie</a>
-=======
-                        <a class="page-scroll" href="#bio">Fondatrice</a>
->>>>>>> fe22886253b25a515a1b9d6ef49957b297a8e2fa
+                    </li>
+
+                    <li>
+                        <a class="page-scroll" href="#legal">Contact</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#legal">Mentions légales</a>
+                        <a href="http://langagement.fr">Langagement</a>
                     </li>
                 </ul>
             </div>
@@ -78,25 +79,15 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-<<<<<<< HEAD
 
-            <img src="img/lbook.jpg" class="img-responsive img-rounded" alt="" />
-          </div>
-          <div class="col-md-6">
-            <p><strong>Biographie</strong></p>
-=======
-          <br>
             <img src="img/logo.jpg" class="img-responsive img-rounded" alt="" />
           </div>
           <div class="col-md-6">
-            <h3>Fondatrice</h3>
-            <br>
->>>>>>> fe22886253b25a515a1b9d6ef49957b297a8e2fa
+            <p><strong>Biographie</strong></p>
             <p>
             Emmanuelle Vanborre, qui a fondé Langagement, est originiaire du sud de la France. </p>
             <p>Après des études d’anglais et de Français Langue Etrangère (FLE) à l’université Paul Valéry à Montpellier, à l’université de Reading en Angleterre et à l’université William & Mary en Virginie, elle a enseigné pendant un an à l’université Dillard, à la Nouvelle Orléans, puis a continué ses études à Boston. </p>
             <p>Elle a obtenu un master et un doctorat de lettres modernes de l’université Boston College où elle enseignait le français. Lors de ses études, elle a également été directrice de la maison française pour laquelle elle organisait des conférences et activités culturelles. Elle a encadré des programmes d’été à Paris pour des groupes d’étudiants américains. Elle a aussi créé des sites web pour l’enseignement du français, a fait des traductions et donné des cours de français et d’anglais à des particuliers et à des associations. </p>
-<<<<<<< HEAD
             <p>Pendant 8 ans, Emmanuelle a été professeur de français à l’université de Gordon College, au nord de Boston. Elle enseignait, conseillait les étudiants, s’occupait du cercle français et organisait des activités culturelles et littéraires. Pendant 3 ans, elle a également été directrice du département de langues et linguistique. </p>
             <p>Elle a publié plusieurs comptes rendus, articles et livres sur la littérature française et francophone, notamment sur Maurice Blanchot, Albert Camus et Maryse Condé.
             </p>
@@ -105,12 +96,6 @@
             Pri pertinacia elaboraret te, an eirmod delicatissimi nec. Eu liber quodsi maiorum mei.
             Civibus perfecto rationibus id his, est noster nostrud aliquando at.
             </blockquote>
-=======
-            <p>Pendant 8 ans, Emmanuelle a été professeur de français à l’université de Gordon College, au nord de Boston. Elle enseignait, conseillait les étudiants, s’occupait du cercle français et organisait des activités culturelles et littéraires. Elle a également été directrice du département de langues et linguistique. </p>
-            <p>Elle a publié plusieurs comptes rendus, articles et livres sur la littérature française et francophone, notamment sur Maurice Blanchot, Albert Camus et Maryse Condé.
-            </p>
-
->>>>>>> fe22886253b25a515a1b9d6ef49957b297a8e2fa
           </div>
         </div>
       </div>
@@ -120,7 +105,6 @@
 <section id="legal">
 
     <div class="container">
-<<<<<<< HEAD
         <div class="row">
 
           <div class="col-md-6">
@@ -130,27 +114,11 @@
             <p>SIREN 813 480 688</p>
             <p>eavanborre@langagement.fr</p>
             <p>06 60 93 92 82</p>
-=======
-        <div class="row vertical-align">
-
-          <div class="col-md-6">
-            <h3>Mentions légales</h3>
-            <br>
-            <p>Emmanuelle Vanborre</p>
-            <p>Langagement</p>
-            <p>SIREN 813 480 688</p>
-            <p><a href="mailto:eavanborre@langagement.fr">eavanborre@langagement.fr</a></p>
-            <p><a href="tel:+33660939282">06 60 93 92 82</a></p>
->>>>>>> fe22886253b25a515a1b9d6ef49957b297a8e2fa
           </div>
 
           <div class="col-md-6">
 
-<<<<<<< HEAD
-            <img src="img/lbook.jpg" class="img-responsive img-rounded" alt="" />
-=======
             <img src="img/eav.jpg" class="img-responsive img-rounded" alt="" />
->>>>>>> fe22886253b25a515a1b9d6ef49957b297a8e2fa
           </div>
 
         </div>
@@ -191,7 +159,3 @@
 
 </html>
 
-<<<<<<< HEAD
-=======
-
->>>>>>> fe22886253b25a515a1b9d6ef49957b297a8e2fa
