--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
                     </li>
 
                     <li>
-                        <a class="page-scroll" href="#legal">Contact</a>
+                        <a class="page-scroll" href="#legal">Mentions légales</a>
                     </li>
                     <li>
                         <a href="http://langagement.fr">Langagement</a>
@@ -88,14 +88,11 @@
             Emmanuelle Vanborre, qui a fondé Langagement, est originiaire du sud de la France. </p>
             <p>Après des études d’anglais et de Français Langue Etrangère (FLE) à l’université Paul Valéry à Montpellier, à l’université de Reading en Angleterre et à l’université William & Mary en Virginie, elle a enseigné pendant un an à l’université Dillard, à la Nouvelle Orléans, puis a continué ses études à Boston. </p>
             <p>Elle a obtenu un master et un doctorat de lettres modernes de l’université Boston College où elle enseignait le français. Lors de ses études, elle a également été directrice de la maison française pour laquelle elle organisait des conférences et activités culturelles. Elle a encadré des programmes d’été à Paris pour des groupes d’étudiants américains. Elle a aussi créé des sites web pour l’enseignement du français, a fait des traductions et donné des cours de français et d’anglais à des particuliers et à des associations. </p>
-            <p>Pendant 8 ans, Emmanuelle a été professeur de français à l’université de Gordon College, au nord de Boston. Elle enseignait, conseillait les étudiants, s’occupait du cercle français et organisait des activités culturelles et littéraires. Pendant 3 ans, elle a également été directrice du département de langues et linguistique. </p>
+            <p>Pendant 8 ans, Emmanuelle a été professeur de français à l’université de Gordon College, au nord de Boston. Elle enseignait, conseillait les étudiants, s’occupait du cercle français et organisait des activités culturelles et littéraires. Elle a également été directrice du département de langues et linguistique. </p>
             <p>Elle a publié plusieurs comptes rendus, articles et livres sur la littérature française et francophone, notamment sur Maurice Blanchot, Albert Camus et Maryse Condé.
             </p>
 
-            <blockquote>
-            Pri pertinacia elaboraret te, an eirmod delicatissimi nec. Eu liber quodsi maiorum mei.
-            Civibus perfecto rationibus id his, est noster nostrud aliquando at.
-            </blockquote>
+            
           </div>
         </div>
       </div>
@@ -108,7 +105,7 @@
         <div class="row">
 
           <div class="col-md-6">
-            <p><strong>Contact</strong></p>
+            <p><strong>Mentions légales</strong></p>
             <p>Emmanuelle Vanborre</p>
             <p>Langagement</p>
             <p>SIREN 813 480 688</p>
