--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Langagement</a>
+                <a class="navbar-brand page-scroll" href="http://langagement.fr">Langagement</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -62,9 +62,6 @@
 
                     <li>
                         <a class="page-scroll" href="#legal">Mentions légales</a>
-                    </li>
-                    <li>
-                        <a href="http://langagement.fr">Langagement</a>
                     </li>
                 </ul>
             </div>
