--- a/contact.html
+++ b/contact.html
@@ -55,11 +55,9 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-
                     <li>
-                        <a class="page-scroll" href="#bio">Biographie</a>
+                        <a class="page-scroll" href="#bio">Fondatrice</a>
                     </li>
-
                     <li>
                         <a class="page-scroll" href="#legal">Mentions légales</a>
                     </li>
@@ -80,9 +78,9 @@
             <img src="img/logo.jpg" class="img-responsive img-rounded" alt="" />
           </div>
           <div class="col-md-6">
-            <p><strong>Biographie</strong></p>
-            <p>
-            Emmanuelle Vanborre, qui a fondé Langagement, est originiaire du sud de la France. </p>
+            <h4>Fondatrice</strong></h4>
+            <br>
+            Emmanuelle Vanborre, qui a fondé Langagement, est originiairFondatricee du sud de la France. </p>
             <p>Après des études d’anglais et de Français Langue Etrangère (FLE) à l’université Paul Valéry à Montpellier, à l’université de Reading en Angleterre et à l’université William & Mary en Virginie, elle a enseigné pendant un an à l’université Dillard, à la Nouvelle Orléans, puis a continué ses études à Boston. </p>
             <p>Elle a obtenu un master et un doctorat de lettres modernes de l’université Boston College où elle enseignait le français. Lors de ses études, elle a également été directrice de la maison française pour laquelle elle organisait des conférences et activités culturelles. Elle a encadré des programmes d’été à Paris pour des groupes d’étudiants américains. Elle a aussi créé des sites web pour l’enseignement du français, a fait des traductions et donné des cours de français et d’anglais à des particuliers et à des associations. </p>
             <p>Pendant 8 ans, Emmanuelle a été professeur de français à l’université de Gordon College, au nord de Boston. Elle enseignait, conseillait les étudiants, s’occupait du cercle français et organisait des activités culturelles et littéraires. Elle a également été directrice du département de langues et linguistique. </p>
@@ -102,12 +100,12 @@
         <div class="row">
 
           <div class="col-md-6">
-            <p><strong>Mentions légales</strong></p>
+            <h4>Mentions légales</h4>
             <p>Emmanuelle Vanborre</p>
             <p>Langagement</p>
             <p>SIREN 813 480 688</p>
-            <p>eavanborre@langagement.fr</p>
-            <p>06 60 93 92 82</p>
+            <p><a href="mailto:eavanborre@langagement.fr">eavanborre@langagement.fr</a></p>
+            <p><a href="tel:+33660939282">06 60 93 92 82</a></p>
           </div>
 
           <div class="col-md-6">
