--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
             <img src="img/logo.jpg" class="img-responsive img-rounded" alt="" />
           </div>
           <div class="col-md-6">
-            <h4>Fondatrice</strong></h4>
+            <h3>Fondatrice</h3>
             <br>
             Emmanuelle Vanborre, qui a fondé Langagement, est originiairFondatricee du sud de la France. </p>
             <p>Après des études d’anglais et de Français Langue Etrangère (FLE) à l’université Paul Valéry à Montpellier, à l’université de Reading en Angleterre et à l’université William & Mary en Virginie, elle a enseigné pendant un an à l’université Dillard, à la Nouvelle Orléans, puis a continué ses études à Boston. </p>
@@ -100,7 +100,7 @@
         <div class="row">
 
           <div class="col-md-6">
-            <h4>Mentions légales</h4>
+            <h3>Mentions légales</h3>
             <p>Emmanuelle Vanborre</p>
             <p>Langagement</p>
             <p>SIREN 813 480 688</p>
