--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@
 <section id="legal">
 
     <div class="container">
-        <div class="row">
+        <div class="row vertical-align">
 
           <div class="col-md-6">
             <h3>Mentions légales</h3>
