--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Cours de FLE, Soutien scolaire, Cours aux entreprises, Traduction, Relecture et correction">
     <meta name="author" content="Langagement">
-    
+
     <meta property="og:title" content="Langagement">
     <meta property="og:url" content="http://langagement.fr">
     <meta property="og:site_name" content="Langagement">
@@ -45,6 +45,18 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <script>
+
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-67794836-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
+
 </head>
 
 <body id="page-top">
@@ -73,7 +85,7 @@
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
-                    
+
                     <li>
                         <a href="http://langagement.com">EN</a>
                     </li>
