--- a/contact.html
+++ b/contact.html
@@ -92,14 +92,11 @@
           <div class="col-md-6">
             <h3>Fondatrice</h3>
             <br>
-            Emmanuelle Vanborre, qui a fondé Langagement, est originiairFondatricee du sud de la France. </p>
+            <p>Emmanuelle Vanborre, qui a fondé Langagement, est originiairFondatricee du sud de la France.</p>
             <p>Après des études d’anglais et de Français Langue Etrangère (FLE) à l’université Paul Valéry à Montpellier, à l’université de Reading en Angleterre et à l’université William & Mary en Virginie, elle a enseigné pendant un an à l’université Dillard, à la Nouvelle Orléans, puis a continué ses études à Boston. </p>
             <p>Elle a obtenu un master et un doctorat de lettres modernes de l’université Boston College où elle enseignait le français. Lors de ses études, elle a également été directrice de la maison française pour laquelle elle organisait des conférences et activités culturelles. Elle a encadré des programmes d’été à Paris pour des groupes d’étudiants américains. Elle a aussi créé des sites web pour l’enseignement du français, a fait des traductions et donné des cours de français et d’anglais à des particuliers et à des associations. </p>
             <p>Pendant 8 ans, Emmanuelle a été professeur de français à l’université de Gordon College, au nord de Boston. Elle enseignait, conseillait les étudiants, s’occupait du cercle français et organisait des activités culturelles et littéraires. Elle a également été directrice du département de langues et linguistique. </p>
-            <p>Elle a publié plusieurs comptes rendus, articles et livres sur la littérature française et francophone, notamment sur Maurice Blanchot, Albert Camus et Maryse Condé.
-            </p>
-
-
+            <p>Elle a publié plusieurs comptes rendus, articles et livres sur la littérature française et francophone, notamment sur Maurice Blanchot, Albert Camus et Maryse Condé.</p>
           </div>
         </div>
       </div>
