--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
                     <h3>Cours et ateliers de littérature</h3>
                         <p>Cours pour améliorer votre connaissance des principaux écrivains, ainsi que des mouvements et critiques littéraires.</p>
-                        <p>Groupes de lecture pour lire ensemble et analyser des ouvrages de littérature française et francophone (notamment des 19e, 20e et 21e siècles).</p>
+                        <p>Groupes de lecture pour lire ensemble et analyser des ouvrages de littérature française et francophone (notamment des XIXe, XXe et XXIe siècles).</p>
                         <p>Parcours visites littéraires de Paris. Visites guidées de Paris, en français ou en anglais, au fil des lieux importants pour les écrivains récents, pour mieux connaître leurs œuvres et les situer dans leur contexte géographique et culturel. </p>
                 </div>
             </div>
